--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build && next export",
     "start": "next start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d buid"
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "next": "^13.1.6",
